objects/arintern__c.object
<CustomObject>
    <fields>
        <fullName>ARemail__c</fullName>
        <label>ARemail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ARphone__c</fullName>
        <label>ARphone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>arintern</label>
    <listViews>
        <fullName>ARinterns</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>address__c</field>
            <operation>equals</operation>
            <value>gachibowli</value>
        </filters>
        <label>#ARinterns</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>arinterns</pluralLabel>
    <recordTypes>
        <fullName>men</fullName>
        <active>true</active>
        <label>men</label>
    </recordTypes>
    <recordTypes>
        <fullName>women</fullName>
        <active>true</active>
        <label>women</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>phone_number_validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
    ISBLANK(ARphone__c) || 
    REGEX(ARphone__c, &quot;^[0-9]{10}$&quot;)
)</errorConditionFormula>
        <errorDisplayField>ARphone__c</errorDisplayField>
        <errorMessage>phone number cannot be more than 10 digits</errorMessage>
    </validationRules>
</CustomObject>